# VisRTX

./: .gitignore  CLAUDE.md  STYLEGUIDE.md
devices/gl/: CLAUDE.md
devices/rtx/: CLAUDE.md
devices/rtx/device/: CMakeLists.txt  visrtx_device.json
devices/rtx/device/array/: Array1D.cpp
devices/rtx/device/frame/: Frame.cu
devices/rtx/device/gpu/: evalMaterialParameters.h  gpu_objects.h  gpu_util.h  intersectRay.h  populateHit.h  sampleLight.h
devices/rtx/device/renderer/: Fast.cpp  Fast_ptx.cu  Interactive_ptx.cu  Quality_ptx.cu  Renderer.cpp  Renderer.h
devices/rtx/device/sampler/: Image1D.cpp  Image1D.h  Image2D.cpp  Image2D.h  Image3D.cpp  Image3D.h
devices/rtx/device/spatial_field/: CustomFieldSampler_ptx.cu
devices/rtx/libmdl/: CMakeLists.txt  Core.cpp
tsd/: CLAUDE.md  README.md  STYLEGUIDE.md
tsd/apps/interactive/: CMakeLists.txt
tsd/apps/interactive/dataTreeEditor/: CMakeLists.txt  DataTreeWindow.cpp  DataTreeWindow.h  tsdDataTreeEditor.cpp
tsd/apps/interactive/demos/: CMakeLists.txt  README.md
tsd/apps/interactive/mpiViewer/: DistributedSceneController.cpp  DistributedSceneController.h  DistributedViewport.cpp  DistributedViewport.h  mpiViewer.cpp
tsd/apps/interactive/multiDeviceViewer/: multiDeviceViewer.cpp
tsd/apps/interactive/network/: CMakeLists.txt  RenderSession.hpp
tsd/apps/interactive/viewer/: CMakeLists.txt  README.md  tsdViewer.cpp
tsd/apps/tools/: CMakeLists.txt  README.md  tsdLua.cpp  tsdOffline.cpp  tsdRender.cpp  tsdVolumeToNanoVDB.cpp
tsd/apps/tutorial/: CMakeLists.txt  tsdTutorialExportUSDScene.cpp  tsdTutorialFlipDiff.cpp  tsdTutorialLoadObj.cpp  tsdTutorialLoadScene.cpp  tsdTutorialLoadUSD.cpp  tsdTutorialMultiRender.cpp  tsdTutorialPipeline.cpp  tsdTutorialRender.cpp  tsdTutorialSaveScene.cpp  tsdTutorialSimple.cpp
tsd/python/: README.md  pyproject.toml
tsd/python/notebooks/: TSDClient.ipynb
tsd/python/tsd_client/: __init__.py  anari_types.py  client.py  connection.py  datatree.py  protocol.py  scene.py  session.py  utils.py  viewer.py
tsd/python/tsd_client/panels/: __init__.py  clip_planes_panel.py  datatree_panel.py  light_panel.py  transfer_function_panel.py
tsd/scripts/: test_lua_api.lua
tsd/scripts/examples/: save_scene.lua
tsd/src/anari_tsd/: Array.cpp  Array.h  CMakeLists.txt  Device.cpp  Device.h  DeviceGlobalState.cpp  DeviceGlobalState.h  Frame.cpp  Group.cpp  Group.h  Instance.cpp  Library.cpp  Object.cpp  Object.h  README.md  World.cpp  World.h
tsd/src/anari_tsd/include/anari_tsd/: anariNewTsdDevice.h
tsd/src/tsd/: CMakeLists.txt  README.md
tsd/src/tsd/algorithms/: CMakeLists.txt  README.md
tsd/src/tsd/algorithms/cpu/: autoExposure.cpp  autoExposure.hpp  clearBuffers.cpp  clearBuffers.hpp  convertColorBuffer.cpp  convertColorBuffer.hpp  depthCompositeFrame.cpp  depthCompositeFrame.hpp  outline.cpp  outline.hpp  outputTransform.cpp  outputTransform.hpp  toneMap.cpp  toneMap.hpp  visualizeAOV.cpp  visualizeAOV.hpp
tsd/src/tsd/algorithms/cpu/detail/: parallel_for.h  parallel_reduce.h
tsd/src/tsd/algorithms/cuda/: autoExposure.cu  autoExposure.hpp  clearBuffers.cu  clearBuffers.hpp  convertColorBuffer.cu  convertColorBuffer.hpp  depthCompositeFrame.cu  depthCompositeFrame.hpp  outline.cu  outline.hpp  outputTransform.cu  outputTransform.hpp  toneMap.cu  toneMap.hpp  visualizeAOV.cu  visualizeAOV.hpp
tsd/src/tsd/algorithms/math/: color.h  device_macros.h  tonemap_curves.h
tsd/src/tsd/animation/: AnimObjectRef.hpp  Animation.cpp  Animation.hpp  AnimationManager.cpp  AnimationManager.hpp  Binding.cpp  Binding.hpp  CMakeLists.txt  CallbackBinding.cpp  CallbackBinding.hpp  Evaluate.cpp  FileBinding.hpp  Interpolation.hpp  ObjectCustomBinding.cpp  README.md  (+11 more)
tsd/tests/: CMakeLists.txt  test_Algorithms.cpp  test_AnimationManager.cpp  test_AnyArray.cpp  test_Array.cpp  test_Geometry.cpp  test_Material.cpp  test_Object.cpp  test_ObjectPool.cpp  test_ObjectUsePtr.cpp  test_Parameter.cpp  test_Scene.cpp
(+359 files in other folders)
